Fixed bug #34782 (token_get_all() gives wrong result)